Trying to fix safari overlap again

--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 }
 
 #game {
+  height: 100dvh;
   position: relative;
-  width: min(800px, 100vw, calc(100vh * (4 / 3)));
   margin: 0 auto;
   aspect-ratio: 4 / 3;
 }
